[package]
name = "xrpl-library"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
hex = "0.4"
secp256k1 = { version = "0.28", features = ["rand-std", "recovery"] }
sha2 = "0.10"
ripemd = "0.1"
bs58 = "0.5"